Galeel | Fixed the alignment issue of search result.

--- a/assets/sass/search.scss
+++ b/assets/sass/search.scss
@@ -51,6 +51,8 @@
   border: 1px solid $silver !important;
   border-radius: 3px !important;
   box-shadow: 0 5px 10px rgba(0,0,0,.2) !important;
+  position: absolute;
+  list-style: none;
 }
 
 .cortana-search-wrapper li {
